<resources>
    <!--  Misc  -->
    <string name="app_name">Studay</string>
    <string name="logo_app">Logo App</string>
    <string name="email_email_com">email@email.com</string>
    <string name="password_hint">•••••••••••••••</string>
    <string name="fazer_login">Fazer Login</string>
    <string name="nao_possui_uma_conta">Não possui uma conta?</string>
    <string name="clique_aqui">Clique aqui</string>
    <string name="meus_professores_favoritos">Meus professores favoritos</string>
    <string name="frase_cadastro">Para se registrar na nossa plataforma é necessário antes selecionar abaixo qual o seu tipo de cadastro e logo após inserir os seus dados.</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="abrir">Abrir</string>
    <string name="fechar">Fechar</string>
    <string name="loading">Carregando…</string>
    <string name="saindo">Saindo…</string>

    <!--  Erros  -->
    <string name="erro_email_senha">E-mail ou senha incorretos!</string>
    <string name="erro_internet">Conexão com a internet indisponivel!</string>
    <string name="erro_login">Ocorreu um erro ao fazer login!</string>
    <string name="erro_email_inexistente">E-mail inexistente!</string>
    <string name="erro_email_em_uso">Este e-mail já está em uso!</string>
    <string name="senha_incorreta">Senha incorreta!</string>
    <string name="minha_conta">Minha conta</string>
    <string name="email_value">email@email.com</string>
    <string name="sem_professores">Não há professores disponíveis...</string>
    <string name="professores_disponiveis">Professores disponíveis</string>

    <!--  Arrays  -->
    <string-array name="sexo">
        <item>Selecione</item>
        <item>Masculino</item>
        <item>Feminino</item>
        <item>Outros</item>
    </string-array>
    <string-array name="dias">
        <item>Selecione</item>
        <item>Domingo</item>
        <item>Segunda-feira</item>
        <item>Terça-feira</item>
        <item>Quarta-feira</item>
        <item>Quinta-feira</item>
        <item>Sexta-feira</item>
        <item>Sábado</item>
    </string-array>
    <string-array name="disciplinas">
        <item>Selecione</item>
        <item>Português</item>
        <item>Matemática</item>
        <item>Geografia</item>
        <item>História</item>
        <item>Ciências</item>
        <item>Física</item>
        <item>Biologia</item>
        <item>Sociologia</item>
        <item>Filosofia</item>
    </string-array>
</resources>